--- a/Views/Posts/TutorialDetail.cshtml
+++ b/Views/Posts/TutorialDetail.cshtml
@@ -46,7 +46,7 @@
                     }
                     <div class="info">
                         <div class="title center">
-                            <a href="/user/@posts?.OwnerUserId"
+                            <a href="/users/@posts?.OwnerUserId"
                                class="">
                                 @posts?.UserDisplayName
                             </a>
@@ -63,7 +63,7 @@
 
                     <div class="right">
                         <div class="title full-width">
-                            <a href="/user/@posts?.OwnerUserId"
+                            <a href="/users/@posts?.OwnerUserId"
                                class="link">
                                 @posts?.UserDisplayName
                             </a>
@@ -124,7 +124,7 @@
                     <div class="ui secondary vertical @*pointing*@ menu">
                         @foreach (var item in relatedPosts)
                         {
-                            <a href="/posts/@tutorial.Id?po_br_i=@item.Key"
+                            <a href="/posts/@tutorial.FriendlyUrl?po_br_i=@item.Key"
                                class="item">
                                 @item.Value
                             </a>
