--- a/Views/Search/Search.cshtml
+++ b/Views/Search/Search.cshtml
@@ -64,12 +64,12 @@
                         {
                             <div class="ui items">
                                 <div class="item border-bottom">
-                                    <a href="/posts/@item.Id"
+                                    <a href="/posts/@item.FriendlyUrl"
                                        class="ui small image">
                                         <img src="@item.CoverImg" alt="">
                                     </a>
                                     <div class="content">
-                                        <a href="/posts/@item.Id"
+                                        <a href="/posts/@item.FriendlyUrl"
                                            class="header title-post left">
                                             @item.Title
                                         </a>
@@ -90,7 +90,7 @@
                                             <p>@item.HeadContent<span>...</span></p>
                                         </div>
                                         <div class="container infor full-width no-padding padding-top-base left">
-                                            <a href="/user/@item.OwnerUserId"
+                                            <a href="/users/@item.OwnerUserId"
                                                class="ui basic image label">
                                                 <img src="@item?.UserAvatar">
                                                 @item.UserDisplayName
@@ -119,12 +119,12 @@
                         {
                             <div class="ui items">
                                 <div class="item border-bottom">
-                                    <a href="/posts/@item.Id"
+                                    <a href="/posts/@item.FriendlyUrl"
                                        class="ui small image">
                                         <img src="@item.CoverImg" alt="">
                                     </a>
                                     <div class="content">
-                                        <a href="/posts/@item.Id"
+                                        <a href="/posts/@item.FriendlyUrl"
                                            class="header title-post left">
                                             @item.Title
                                         </a>
@@ -145,7 +145,7 @@
                                             <p>@item.HeadContent<span>...</span></p>
                                         </div>
                                         <div class="container infor full-width no-padding padding-top-base left">
-                                            <a href="/user/@item.OwnerUserId"
+                                            <a href="/users/@item.OwnerUserId"
                                                class="ui basic image label">
                                                 <img src="@item?.UserAvatar">
                                                 @item.UserDisplayName
@@ -174,12 +174,12 @@
                         {
                             <div class="ui items">
                                 <div class="item border-bottom">
-                                    <a href="/posts/@item.Id"
+                                    <a href="/posts/@item.FriendlyUrl"
                                        class="ui small image">
                                         <img src="@item.CoverImg" alt="">
                                     </a>
                                     <div class="content">
-                                        <a href="/posts/@item.Id"
+                                        <a href="/posts/@item.FriendlyUrl"
                                            class="header title-post left">
                                             @item.Title
                                         </a>
@@ -200,7 +200,7 @@
                                             <p>@item.HeadContent<span>...</span></p>
                                         </div>
                                         <div class="container infor full-width no-padding padding-top-base left">
-                                            <a href="/user/@item.OwnerUserId"
+                                            <a href="/users/@item.OwnerUserId"
                                                class="ui basic image label">
                                                 <img src="@item?.UserAvatar">
                                                 @item.UserDisplayName
@@ -272,7 +272,7 @@
                         {
                             <div class="container full-width no-padding">
                                 <div class="col-lg-5 col-md-5 col-xs-5 col-sm-5 no-padding">
-                                    <a href="/user/@user.Id"
+                                    <a href="/users/@@user.AccountName"
                                        class="ui basic image label">
                                         <img src="@user?.Avatar">
                                         @user?.DisplayName
