--- a/Views/Posts/PostsManager.cshtml
+++ b/Views/Posts/PostsManager.cshtml
@@ -125,9 +125,9 @@
                     <p class="ui green tiny button post right">Đăng bài</p>
                     <p class="ui green tiny button answer right" style="display:none">Thêm đáp án</p>
                     <i class="history pointer icon right hidden"></i>
-                    <i class="trash pointer icon right"></i>
-                    <i class="lock icon pointer right"></i>
-                    <i class="add pointer icon right"></i>
+                    <i class="remove-trash trash pointer icon right"></i>
+                    <i class="publish-or-private lock icon pointer right"></i>
+                    <i class="create-new add pointer icon right"></i>
                 </div>
             </div>
 
